--- a/StockMarket/package.json
+++ b/StockMarket/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "tslint ."
   },
   "dependencies": {
     "react": "16.8.6",
@@ -15,11 +15,18 @@
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@types/jest": "^24.0.17",
+    "@types/react": "^16.9.1",
+    "@types/react-native": "^0.60.3",
+    "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.8.0",
-    "eslint": "^6.1.0",
+    "tslint": "^5.17.0",
+    "tslint-clean-code": "^0.2.9",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.6",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.3"
   },
   "jest": {
     "preset": "react-native"
