--- a/StockMarket/ios/Podfile
+++ b/StockMarket/ios/Podfile
@@ -28,6 +28,8 @@ target 'StockMarket' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'StockMarketTests' do
     inherit! :search_paths
     # Pods for testing
