--- a/StockMarket/package.json
+++ b/StockMarket/package.json
@@ -8,8 +8,11 @@
     "lint": "tslint ."
   },
   "dependencies": {
+    "@types/react-navigation": "^3.0.8",
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "react-native": "0.60.4",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -20,11 +23,11 @@
     "@types/react-native": "^0.60.3",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.8.0",
-    "tslint": "^5.17.0",
-    "tslint-clean-code": "^0.2.9",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-test-renderer": "16.8.6",
+    "tslint": "^5.17.0",
+    "tslint-clean-code": "^0.2.9",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.3"
   },
