--- a/StockMarket/ios/Podfile
+++ b/StockMarket/ios/Podfile
@@ -30,6 +30,8 @@ target 'StockMarket' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'StockMarketTests' do
     inherit! :search_paths
     # Pods for testing
