--- a/StockMarket/package.json
+++ b/StockMarket/package.json
@@ -8,13 +8,14 @@
     "lint": "tslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
+    "@types/airtable": "^0.5.6",
     "@types/react-native-vector-icons": "^6.4.1",
     "@types/react-navigation": "^3.0.8",
+    "airtable": "^0.7.1",
+    "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.4",
-    "react-native-calendar-strip": "^1.3.8",
-    "react-native-calendars": "^1.205.0",
-    "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
@@ -26,12 +27,10 @@
     "@types/jest": "^24.0.17",
     "@types/react": "^16.9.1",
     "@types/react-native": "^0.60.3",
-    "@types/react-native-calendars": "^1.20.7",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
-    "react-native-gridview": "^0.1.2",
     "react-test-renderer": "16.8.6",
     "tslint": "^5.17.0",
     "tslint-clean-code": "^0.2.9",
