--- a/StockMarket/package.json
+++ b/StockMarket/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "@types/airtable": "^0.5.6",
+    "@types/react-native-snackbar-component": "^1.1.0",
     "@types/react-native-vector-icons": "^6.4.1",
     "@types/react-navigation": "^3.0.8",
     "airtable": "^0.7.1",
@@ -17,6 +18,7 @@
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-snackbar-component": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
