--- a/StockMarket/package.json
+++ b/StockMarket/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "@types/airtable": "^0.5.6",
-    "@types/react-native-snackbar-component": "^1.1.0",
     "@types/react-native-vector-icons": "^6.4.1",
     "@types/react-navigation": "^3.0.8",
     "airtable": "^0.7.1",
@@ -18,7 +17,8 @@
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-snackbar-component": "^1.1.0",
+    "react-native-svg": "^9.7.1",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
@@ -29,10 +29,12 @@
     "@types/jest": "^24.0.17",
     "@types/react": "^16.9.1",
     "@types/react-native": "^0.60.3",
+    "@types/react-native-svg-charts": "^5.0.2",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
+    "react-native-chart-kit": "^3.2.1",
     "react-test-renderer": "16.8.6",
     "tslint": "^5.17.0",
     "tslint-clean-code": "^0.2.9",
