--- a/StockMarket/package.json
+++ b/StockMarket/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --verbose --coverage",
     "lint": "tslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.6.1",
     "@types/airtable": "^0.5.6",
     "@types/react-native-vector-icons": "^6.4.1",
     "@types/react-navigation": "^3.0.8",
@@ -25,17 +24,21 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "@types/jest": "^24.0.17",
+    "@types/enzyme": "^3.9.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.13",
     "@types/react": "^16.9.1",
     "@types/react-native": "^0.60.3",
     "@types/react-native-svg-charts": "^5.0.2",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.8.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-native-chart-kit": "^3.2.1",
     "react-test-renderer": "16.8.6",
+    "react-dom": "^16.8.6",
     "tslint": "^5.17.0",
     "tslint-clean-code": "^0.2.9",
     "tslint-react": "^4.0.0",
